--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.code__block code {
+  @apply leading-6 font-mono !important;
+}
+
+.code__block span {
+  @apply no-underline !important;
+}
