--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,18 @@
 .code__block span {
   @apply no-underline !important;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.mockup-code pre:before{
+  margin: 0;
+}
