--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,15 +12,22 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
-.mockup-code pre:before{
+.mockup-code pre:before {
   margin: 0;
+}
+
+::-moz-selection {
+  @apply bg-accent text-primary-focus !important;
+}
+::selection {
+  @apply bg-accent text-primary-focus !important;
 }
